--- a/app/assets/stylesheets/campaigns.scss
+++ b/app/assets/stylesheets/campaigns.scss
@@ -4,7 +4,7 @@
     }
   
     .card-backgroud{
-      background-color: $grey-dark;
+      background-color: grey-dark;
       border-radius: 5px;
     }  
   }
