--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -30,7 +30,7 @@
             </div>
           <% else %>
             <div class="has-text-centered section">
-              <i id="liked"></i>
+              <i id="liked">liked</i>
               <i id="disliked"></i>
             </div>
           <% end %>
